--- a/src/app/shared/swiper-wrapper/swiper-wrapper.component.scss
+++ b/src/app/shared/swiper-wrapper/swiper-wrapper.component.scss
@@ -1,3 +1,7 @@
+:host {
+	background-color: white;
+}
+
 .button-panel {
 	text-align: right;
 	background-color: rgba(0, 0, 0, 0.6);
